avoid tsleep also during shutdown (and in particular ACPI poweroff), should fix PR kern/39141 by Takahiro Kambe and PR port-i386/41110 by Reinoud Zandijk